# fica-academic

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Horarios.csv  MANUAL_INSTALACION.md  Makefile  PRODUCTION-CONFIG.md  PRODUCTION-TESTING.md  Progress-22-08-2025.md  README.md  STATUS.md  TESTING-GUIDE.md  azure-deploy.yaml  cleanup-prod.sh  deploy-azure.sh  deploy-to-azure.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  requirements-dev.txt  reset.sh  run-tests-locally.sh  test-prod.sh
backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Plantilla-Carga.xlsx  README.md  alembic.ini  docker-compose.test.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run-tests-locally.sh
backend/alembic/: env.py
backend/alembic/versions/: b410b0eb9d5a_baseline.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/auth/: routes.py  schemas.py  service.py
backend/app/auth/routes/: auth_router.py
backend/app/auth/services/: auth_service.py
backend/app/auth/utils/: auth_utils.py
backend/app/core/: __init__.py  config.py  config_loader.py  database.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  user.py
backend/app/tests/: conftest.py  test_auth_routes.py  test_health.py  test_routes.py  test_user_routes.py
backend/app/user/models/: user.py
backend/app/user/routes/: user_router.py
backend/app/user/schemas/: user.py
backend/app/user/services/: user_service.py
backend/docs/: index.md
backend/docs/getting-started/: configuration.md  first-run.md  index.md  installation.md
backend/docs/stylesheets/: extra.css
backend/docs/user-guide/: development.md  index.md  production.md  project-structure.md  testing.md
backend/docs/user-guide/admin-panel/: adding-models.md  configuration.md  index.md  user-management.md
backend/docs/user-guide/api/: endpoints.md  exceptions.md  index.md  pagination.md  versioning.md
backend/docs/user-guide/authentication/: index.md  jwt-tokens.md  permissions.md  user-management.md
backend/docs/user-guide/background-tasks/: index.md
backend/docs/user-guide/caching/: cache-strategies.md  client-cache.md  index.md  redis-cache.md
backend/docs/user-guide/configuration/: docker-setup.md  environment-specific.md  environment-variables.md  (+2 more)
backend/migrations/: env.py
backend/src/: .env.example  SYSTEM_UPDATE_ENV_VARS.md  env.production.template
backend/src/migrations/: README.md  env.py
backend/src/scripts/: clean_tables.py  create_first_superuser.py  fix_special_chars.py  init_db.py  run_all_seeders.py  seed_academic_levels.py  seed_coordinations.py  seed_courses.py  seed_demo_users.py  seed_faculties_schools.py  seed_fixed_holiday_rules.py  seed_holidays.py  seed_hourly_rates.py  seed_professors.py  seed_schedule_times.py  seed_subjects.py  seed_terms.py  temp_transform.py  test_seeders.py
backend/src/uploads/: .gitignore  README.md  index.html
backend/tests/: README.md  conftest.py  test_academic_level.py  test_academic_load_class.py  test_academic_load_file.py  test_academic_load_processing.py  test_academic_load_tasks.py  test_annual_holidays_api.py  test_annual_holidays_crud.py  test_billing_monthly_budget_api.py  test_billing_payment_summary_api.py  test_billing_report_api.py  test_billing_schedule_blocks_api.py  test_billing_utils.py  test_catalog_coordination.py  test_catalog_course.py  test_catalog_professor.py  test_catalog_schedule_time.py  test_catalog_subject.py  test_class_days_calculation.py  test_config.py  test_faculties.py  test_hourly_rate_history.py  test_login.py  test_logout.py  test_recycle_bin.py  test_redis_blacklist.py  test_routes.py  test_schools.py  test_security.py  test_seed_schedule_times.py  test_tasks.py  test_template_generation.py  test_user.py  test_user_scope.py  test_user_scopes.py
backend/tests/helpers/: generators.py
(+438 files in other folders)
